# flashmask

./: .gitmodules  MANIFEST.in  README.md  goal.md  main.py  pyproject.toml  setup.py  summary_flashmask.md
context/: generate_startend_row_indices.py  interface.md  masks.py
documentation/: 01-llm-challenges.md  02-flashmask-innovation.md  03-performance-benefits.md  04-applications.md  05-quick-start.md  06-references.md  README.md
goal/: phase-0-1-completion-audit.md  phase-0-1-reference-map.md  phase-0-1-reset-and-mask-spec.md  phase-0-1-worktree-audit.md  phase-2-completion-audit.md  phase-2-pytorch-extension-abi.md  phase-3-completion-audit.md  phase-3-port-forward-kernels.md  phase-3-progress-audit.md  phase-4-backward.md  phase-4-completion-audit.md  phase-5-backend-router.md  phase-5-completion-audit.md  phase-6-completion-audit.md  phase-6-pe-integration.md  phase-7-benchmarks-and-proof.md  phase-7-completion-audit.md  phase-7-progress-audit.md  phase-8-completion-audit.md  phase-8-hardening.md
investigation/: GPU-Tips.md  The-Goal.md  api.md  context-rot-old-fm-plan.md  data-prep.md  flashmask-lab-plan.md
paper/: FlashMask.md
tests/: test_backend_contract.py  test_builders.py  test_core.py  test_cuda_extension_optional.py  test_cuda_pe_parity_optional.py  test_package_surface.py  test_pe.py  test_proof.py
uv-docs/: Building and publishing a package _ uv.md  Commands _ uv.md  Features _ uv.md  First steps _ uv.md  Getting help _ uv.md  Getting started _ uv.md  Projects_Building distributions _ uv.md  Projects_Configuring projects _ uv.md  Tools _ uv.md  (+12 more)
(+42 files in other folders)
